--- a/TODOApp/TODO.WebApi/appsettings.json
+++ b/TODOApp/TODO.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=TODOAppCF_DB;User Id=sa;Password=Abc.123456;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=todoappsqlserver,1433;Database=TODOAppCF_DB;User Id=sa;Password=Abc.123456;TrustServerCertificate=true;"
   }
 }
